# decimate

./: LICENSE.md  README.md  pyproject.toml
SP800-90B_EntropyAssessment/: README.md
SP800-90B_EntropyAssessment/cpp/: iid_main.cpp  iid_main.h
SP800-90B_EntropyAssessment/cpp/iid/: chi_square_tests.h  permutation_tests.h
SP800-90B_EntropyAssessment/cpp/shared/: utils.h
examples/: example_decimate_bin_search.py  example_decimated_results.py  example_iid_main.py
examples/data/: Example_decimate_bin_search_results_provided.txt
src/: README.md
src/decimate/: deci.py
stats90b/: setup.py  stats90b.cpp
