# This file is part of Teron Labs' Decimate distribution.
# Copyright (C) 2024 Teron Labs <https://www.teronlabs.com/>, <info@teronlabs.com> 
#
# Licensed under the GNU General Public License v3.0 (GPLv3). For details see the LICENSE.md file.
#
# Author(s)
# Yvonne Cliff, Teron Labs <yvonne@teronlabs.com>.
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, version 3 of the License.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <https:#www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "decimate"
version = "1.0"

[tool.setuptools]
package-dir = {"" = "src"}
packages=["decimate"]

[project]
name = "decimate"
version = "1.0"
authors = [
  { name="Teron Labs", email="info@teronlabs.com" },
  { name="Yvonne Cliff", email="yvonne@teronlabs.com"},
  { name="Teron Labs" },
]
description = "Decimate and graph noise source samples for entropy estimation"
readme = "src/README.md"
dependencies = [
  "stats90b",
  "matplotlib",
  "numpy",
]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
[project.urls]
Homepage = "https://www.teronlabs.com/"